--- a/public/index.html
+++ b/public/index.html
@@ -141,6 +141,7 @@
                                         <th class="px-3 py-2 text-left text-xs font-medium text-gray-500 uppercase">Titre</th>
                                         <th class="px-3 py-2 text-left text-xs font-medium text-gray-500 uppercase">H1</th>
                                         <th class="px-3 py-2 text-left text-xs font-medium text-gray-500 uppercase">Status</th>
+                                        <th class="px-3 py-2 text-left text-xs font-medium text-gray-500 uppercase">Capture</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -156,6 +157,16 @@
                                                       :class="snapshot.status === '200' ? 'bg-green-100 text-green-800' : 'bg-red-100 text-red-800'"
                                                       x-text="snapshot.status">
                                                 </span>
+                                            </td>
+                                            <td class="px-3 py-2">
+                                                <a :href="getWaybackUrl(snapshot.timestamp, snapshot.original)" 
+                                                   target="_blank"
+                                                   class="inline-flex items-center px-2 py-1 bg-blue-600 hover:bg-blue-700 text-white text-xs font-medium rounded transition-colors">
+                                                    <svg class="w-3 h-3 mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path>
+                                                    </svg>
+                                                    Voir
+                                                </a>
                                             </td>
                                         </tr>
                                     </template>
